trunk/Archive2/7a/8b991c0acea407/output
main.cpp:10:1: error: 'Shape' does not name a type
 Shape:
 ^
